Specified maturity and labor length units in the Obstetrics form. PT Story: https://www.pivotaltracker.com/story/show/63891350

--- a/omod/src/main/webapp/resources/htmlforms/obstetricHistory.html
+++ b/omod/src/main/webapp/resources/htmlforms/obstetricHistory.html
@@ -72,10 +72,10 @@
 	<th style="background-color: #696969; color: #ffffff;">Year<br/>(dd/mm/yyyy)</th>
 	<th style="background-color: #696969; color: #ffffff;">Number<br/>of Times<br/>ANC<br/>Attended</th>
 	<th style="background-color: #696969; color: #ffffff;">Place of delivery</th>
-	<th style="background-color: #696969; color: #ffffff;">Maturity</th>
-	<th style="background-color: #696969; color: #ffffff;">Duration<br/>of<br/>Labor</th>
+	<th style="background-color: #696969; color: #ffffff;">Maturity<br/>(Weeks)</th>
+	<th style="background-color: #696969; color: #ffffff;">Duration<br/>of<br/>Labor<br/>(Hours)</th>
 	<th style="background-color: #696969; color: #ffffff;">Type of Delivery</th>
-	<th style="background-color: #696969; color: #ffffff;">Birth<br/>Weight(Kg)</th>
+	<th style="background-color: #696969; color: #ffffff;">Birth<br/>Weight<br/>(Kg)</th>
 	<th style="background-color: #696969; color: #ffffff;">Sex</th>
 	<th style="background-color: #696969; color: #ffffff;">Outcome</th>
 	<th style="background-color: #696969; color: #ffffff;">Event's<br/>During<br/>Puerperium</th>
