--- a/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsImmunization.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsImmunization.html
@@ -25,11 +25,13 @@
 		text-align: left;
 		}
 	</style>
+	<div style="display:none">
+		<encounterProvider default="currentUser" />
+	</div>
 	<div class="ke-form-header">
 		<table style="width: 100%">
 			<tr>
 				<td>Encounter Date: <encounterDate id="encounter-date" showTime="false" /></td>
-				<td>Provider: <encounterProvider default="currentUser" /></td>
 				<td>Location: <encounterLocation default="GlobalProperty:kenyaemr.defaultLocation" /></td>
 
 			</tr>
