--- a/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsHeiOutcomes.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsHeiOutcomes.html
@@ -26,9 +26,11 @@
 		}
 	</style>
 	<div class="ke-form-header">
+		<div style="display:none">
+			<encounterProvider default="currentUser" />
+		</div>
 		<table style="width: 100%">
 			<tr>
-				<td>Provider: <encounterProvider default="currentUser" /></td>
 				<td>Location: <encounterLocation default="GlobalProperty:kenyaemr.defaultLocation" /></td>
 			</tr>
 		</table>
