--- a/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsHeiOutcomes.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsHeiOutcomes.html
@@ -43,7 +43,7 @@
 				</tr>
 				<tr>
 					<td>Exit Date</td>
-					<td><encounterDate  id="exitDate"/></td>
+					<td><encounterDate  id="exitDate" showTime="true" /></td>
 				</tr>
 				<tr>
 					<td>HIV Status</td>
