--- a/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsImmunization.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsImmunization.html
@@ -31,7 +31,7 @@
 	<div class="ke-form-header">
 		<table style="width: 100%">
 			<tr>
-				<td>Encounter Date: <encounterDate id="encounter-date" showTime="false" /></td>
+				<td>Encounter Date: <encounterDate id="encounter-date" showTime="true" /></td>
 				<td>Location: <encounterLocation default="GlobalProperty:kenyaemr.defaultLocation" /></td>
 
 			</tr>
