--- a/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsDiscontinuation.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsDiscontinuation.html
@@ -25,10 +25,12 @@
 		text-align: left;
 		}
 	</style>
+	<div style="display:none">
+		<encounterProvider default="currentUser" />
+	</div>
 	<div class="ke-form-header">
 		<table style="width: 100%">
 			<tr>
-				<td>Provider: <encounterProvider default="currentUser" /></td>
 				<td>Location: <encounterLocation default="GlobalProperty:kenyaemr.defaultLocation" /></td>
 			</tr>
 		</table>
@@ -39,7 +41,7 @@
 				<tr><td colspan="2"><b>Child Services Discontinuation</b></td></tr>
 				<tr>
 					<td>Discontinued Date</td>
-					<td><encounterDate  id="exitDate"/></td>
+					<td><encounterDate  id="exitDate" showTime="true"/></td>
 				</tr>
 				<tr>
 					<td>Reason</td>
