--- a/omod/src/main/webapp/resources/htmlforms/medicalAndSurgicalHistory.html
+++ b/omod/src/main/webapp/resources/htmlforms/medicalAndSurgicalHistory.html
@@ -27,9 +27,8 @@
 	<div class="ke-form-header">
 		<table style="width: 100%">
 			<tr>
-				<td>Date: <encounterDate id="encounter-date" showTime="true" /></td>
-				<td>Provider: <encounterProvider default="currentUser" /></td>
-				<td>Location: <encounterLocation default="GlobalProperty:kenyaemr.defaultLocation" /></td>
+				<td align="left">Date: <encounterDate id="encounter-date" showTime="true" /></td>
+				<td align="right">Location: <encounterLocation default="GlobalProperty:kenyaemr.defaultLocation" /></td>
 			</tr>
 		</table>
 	</div>
