--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivDiscontinuation.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivDiscontinuation.html
@@ -72,7 +72,7 @@
 					</tr>
 					<tr>
 						<td>Reason:</td>
-						<td><obs conceptId="161555AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="idReason" /></td>
+						<td><obs conceptId="161555AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="159492AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160034AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5240AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,819AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1067AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Transferred Out,Died,Lost to Follow,Cannot afford Treatment,Other,Unknown" id="idReason" /></td>
 						<td></td>
 						<td></td>
 					</tr>
