ANC No no longer required for MCHMS enrollment. Story: https://www.pivotaltracker.com/story/show/75786498

--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsEnrollment.html
@@ -232,7 +232,7 @@
 			<tr>
 				<td width="250">ANC No:</td>
 				<td>
-					<obs conceptId="161655AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" required="true"/>
+					<obs conceptId="161655AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" required="false"/>
 				</td>
 			</tr>
 			<tr>
