--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivDiscontinuation.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivDiscontinuation.html
@@ -63,25 +63,29 @@
 	<div class="ke-form-content">
 		<fieldset>
 			<legend>Discontinue HIV Care</legend>
-				<table class="baseline-aligned" width="100%" border="0">
-					<tr>
-						<td>Date:</td>
-						<td><encounterDate id="encounter-date" showTime="true" /></td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td>Reason:</td>
-						<td><obs conceptId="161555AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="idReason" /></td>
-						<td></td>
-						<td></td>
-					</tr>
-				</table>
+				<div>
+					<table class="baseline-aligned" width="50%" border="0">
+						<tr>
+							<td>Date:</td>
+							<td><encounterDate id="encounter-date" showTime="true" /></td>
+						</tr>
+						<tr>
+							<td>Reason:</td>
+							<td><obs conceptId="161555AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="idReason" /></td>
+						</tr>
+					</table>
+				</div>
 				<div id="pdied">
 					<table>
 						<tr>
-							<td>If Patient Died, please provide Date of Death if Known:</td>
+							<td><b>If Patient Died</b></td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>Provide Date of Death if Known:</td>
 							<td><obs conceptId="1543AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
+						</tr>
+						<tr>
 							<td></td>
 							<td></td>
 						</tr>
@@ -91,10 +95,16 @@
 				<div id="ptransferred">
 					<table>
 						<tr>
-							<td><i>(If transferred out)</i> <br/>Transfer to Facility:</td>
-							<td ><br/><obs conceptId="159495AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" labelText=" "/></td>
+							<td><b>(If transferred out)</b> <br/></td>
 							<td></td>
-							<td></td>
+						</tr>
+						<tr>
+							<td>Transfer to Facility:</td>
+							<td ><obs conceptId="159495AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" labelText=" "/></td>
+						</tr>
+						<tr>
+							<td>Date Transferred Out</td>
+							<td><obs conceptId="160649AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" /></td>
 						</tr>
 					</table>
 				</div>
