Added CQI indicators

--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivDiscontinuation.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivDiscontinuation.html
@@ -93,8 +93,8 @@
 					<tr>
 						<td><i>(If transferred out)</i> <br/>Transfer to Facility:</td>
 						<td ><br/><obs conceptId="159495AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" labelText=" "/></td>
-						<td></td>
-						<td></td>
+						<td>Date Transferred Out<br /></td>
+						<td><br/><obs conceptId="160649AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" labelText=" "/></td>
 					</tr>
 				</table>
 			</div>
