More CQI indicators, concept test set and correcting of fieldset in the tb forms

--- a/omod/src/main/webapp/resources/htmlforms/tb/tbEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/tb/tbEnrollment.html
@@ -190,7 +190,7 @@
 			</tr>
 			<tr id="topMost">
 				<td valign="top">
-					<fielset>
+					<fieldset>
 						<legend>Clinic and Encounter Details</legend>
 						<table border="0" class="tb1" width="100%">
 							<tr>
@@ -213,10 +213,10 @@
 								<td colspan="2"><div id="startOfTreatmentDateError" class="error"></div></td>
 							</tr>
 						</table>
-					</fielset>
+					</fieldset>
 				</td>
 				<td valign="top">
-				<fielset>
+				<fieldset>
 					<legend>Patient Referral Information</legend>
 						<table class="tb1" width="100%">
 							<tr>
@@ -239,12 +239,12 @@
 								<td colspan="2"><div id="referalDateError" class="error"></div></td>
 							</tr>
 						</table>
-					</fielset>
+					</fieldset>set>
 				</td>
 			</tr>
 			<tr>
 				<td valign="top">
-					<fielset>
+					<fieldset>
 						<legend>Patient Information (Edit Address using the Registration screen)</legend>
 							<table id="patientAddress" class="tb1" border="0" width="100%">
 								<tr>
@@ -268,10 +268,10 @@
 									<td><obs id="height" conceptId="5090AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" labelText=" "/></td>
 								</tr>
 							</table>
-						</fielset>
+						</fieldset>
 					</td>
 				<td valign="top">
-					<fielset>
+					<fieldset>
 						<legend>Treatment Supported Information</legend>
 							<table width="100%" class="tb1" id="treatmentSupporter">
 								<tr>
@@ -296,12 +296,12 @@
 									</td>
 								</tr>
 							</table>
-					</fielset>
+					</fieldset>
 				</td>
 			</tr>
 			<tr>
 				<td valign="top">
-					<fielset>
+					<fieldset>
 						<legend>Disease Classification</legend>
 							<table class="tb1" border="0" width="100%">
 								<tr>
@@ -375,10 +375,10 @@
 								</td>
 							</tr>
 						</table>
-					</fielset>
+					</fieldset>
 				</td>
 				<td valign="top">
-					<fielset>
+					<fieldset>
 						<legend>Patient Classification</legend>
 							<table class="tb1" border="0" width="100%">
 								<tr>
@@ -390,12 +390,12 @@
 								<tr><td></td></tr>
 								<tr><td></td></tr>
 							</table>
-						</fielset>
+						</fieldset>
 				</td>
 			</tr>
 			<tr>
 				<td valign="top">
-					<fielset>
+					<fieldset>
 						<legend>Transfer In Information (Enter only if patient is a Transfer In)</legend>
 							<table class="tb1" border="0" width="100%" id="transferInDetails">
 								<tr>
@@ -416,7 +416,7 @@
 								</tr>
 								<td colspan="2"><div id="transferInDatesError" class="error"></div></td>
 							</table>
-						</fielset>
+						</fieldset>
 				</td>
 			</tr>
 		</table>
